--- a/style.css
+++ b/style.css
@@ -18,25 +18,24 @@ body {
     position: relative;
 
     border-radius: 0.3125rem;
-    border: 20px solid #fff;
+    border: 10px solid #fff;
 
     overflow: hidden;
 }
 
-.before-image,
-.after-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+picture {
+    position: absolute;    
 }
 
 img {
-    width: 100%;
+    width: 80vw;
     height: 100%;
     object-fit: cover;
+}
+
+.before-image {
+    width: 50%;
+    overflow: hidden;
 }
 
 #slider {
@@ -48,17 +47,18 @@ img {
     height: 100%;
     appearance: none;
     -webkit-appearance: none;
-    background-color: transparent;   
+    background-color: transparent;  
+    
+    z-index: 10;
 }
 
 #slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 24px;
+    width: 12px;
     height: 100vh;
     background-color: white;
     cursor: pointer;
-
 
 }
 
@@ -68,5 +68,14 @@ img {
     background-color: #333;
     border: none;
     border-radius: 50%;
+    cursor: pointer;
+}
+
+#dragger {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
     cursor: pointer;
 }
